# phil

./: AGENTS.md  BUILD.bazel  Makefile  README  WORKSPACE  bazel-bin  bazel-out  bazel-phil  bazel-testlogs  deps.bzl  git_datetime-totime-nil-location.sh  go.mod  go.sum  integration_test.go  out.txt
cmd/phil/: BUILD.bazel  main.go
datetime/: 2025-04-23  BUILD.bazel  ISSUES.md  clean.go  datetime.go  datetime.go_2025-04-21  datetime.go_2025-04-21-a  datetime_glr.go  datetime_lex.go  datetime_parse.go  datetime_test.go  datetime_yacc.go  datetime_yacc.states.txt  datetime_yacc.y  generate.go  parse.go  parse_glr.go  parse_lex.go  parse_lex.go_2025-01-27  parse_meridiem_test.go  parse_newline_test.go  parse_pipe_schedule_test.go  parse_test.go  parse_yacc.go  parse_yacc.states.txt  parse_yacc.y  parse_yacc.y_2025-04-24
glr/: BUILD.bazel  generate.go  glr.go  glr_load.go  glr_parse.go  glr_parse.go_2025-01-12  glr_test.go  simple_glr.go  simple_lex.go  simple_test.go  simple_yacc.go  simple_yacc.states.txt  simple_yacc.y
ical/: BUILD.bazel  calendar.go  calendar_test.go  rrule.go  urls.go  urls_test.go
parse/: BUILD.bazel  clean.go  datetime.go  datetime_glr.go  datetime_lex.go  datetime_test.go  datetime_yacc.go  datetime_yacc.states.txt  datetime_yacc.y  generate.go  parse.go
testdata/: 000_2023.ics  001_2023-02.ics  002_2023-02-03.ics  003_2023-02-03t.ics  004_2023-02-03t1200.ics  005_2023-02-03t120000.ics  006_2023-02-03t120000z.ics  007_2023-02-03t1200000000.ics  008_2023-02-03t120000-0000.ics  009_2023-02-03t120000-0500.ics  010_feb_3.ics  011_february_3.ics  012_fri_feb_3.ics  013_fri_3_feb.ics  014_3_feb.ics  015_3_feb.ics  016_3rd_of_feb.ics  017_fri_3_feb.ics  018_feb_3_2023.ics  019_february_3_2023.ics  020_february_3_2023.ics  021_february_3rd_2023.ics  022_fri_feb_3_2023.ics  023_friday_feb_3rd_2023.ics  024_timefeb_3_2023.ics  025_3_feb_2023.ics  026_3rd_feb_2023.ics  027_3_february_2023.ics  028_friday_3rd_feb_2023.ics  029_feb_2023.ics  030_0203_na.ics  031_0203_rest.ics  032_0203_na.ics  033_0203_rest.ics  034_232023_na.ics  035_232023_rest.ics  036_feb_3_google_calendar_ics.ics  037_updated_feb_3.ics  038_workshop_update_2323_na.ics  039_workshop_feb_3_2023__virtual.ics  (+172 more)
tools/glr/: BUILD.bazel  glr_generate.go  glr_generate.go_2025-01-12
