load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/findyourpaths/phil
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
