load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "glr",
    srcs = [
        "generate.go",
        "glr.go",
        "glr_load.go",
        "simple_lex.go",
        "simple_yacc.go",
    ],
    importpath = "github.com/findyourpaths/phil/glr",
    visibility = ["//visibility:public"],
)

go_test(
    name = "glr_test",
    srcs = ["glr_test.go"],
    embed = [":glr"],
)
