load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "glr",
    srcs = [
        "generate.go",
        "glr_parse.go",
        "simple_glr.go",
        "simple_lex.go",
        "simple_yacc.go",
    ],
    importpath = "github.com/findyourpaths/phil/glr",
    visibility = ["//visibility:public"],
)

go_test(
    name = "glr_test",
    srcs = ["simple_test.go"],
    embed = [":glr"],
)
