load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ical",
    srcs = ["calendar.go"],
    importpath = "github.com/findyourpaths/phil/ical",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_arran4_golang_ical//:golang-ical"],
)

go_test(
    name = "ical_test",
    srcs = ["calendar_test.go"],
    embed = [":ical"],
    deps = ["@com_github_segmentio_ksuid//:ksuid"],
)
