load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parse",
    srcs = [
        "clean.go",
        "datetime_glr.go",
        "datetime_lex.go",
        "datetime_yacc.go",
        "generate.go",
        "parse.go",
    ],
    importpath = "github.com/findyourpaths/phil/parse",
    visibility = ["//:__subpackages__"],
    deps = [
        "//glr",
        "@com_github_kr_pretty//:pretty",
        "@com_github_microcosm_cc_bluemonday//:bluemonday",
        "@com_google_cloud_go//civil",
    ],
)

go_test(
    name = "parse_test",
    srcs = ["datetime_test.go"],
    embed = [":parse"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_google_cloud_go//civil",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
