load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "phil_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/phil/cmd/phil",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "phil",
    embed = [":phil_lib"],
    visibility = ["//visibility:public"],
)
